--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular2-quickstart",
+  "name": "angular2-work",
   "version": "1.0.0",
   "scripts": {
     "start": "concurrent \"npm run tsc:w\" \"npm run lite\" ",
@@ -11,20 +11,19 @@
   },
   "license": "ISC",
   "dependencies": {
-    "@angular2-material/button": "2.0.0-alpha.2",
-    "@angular2-material/checkbox": "^2.0.0-alpha.2",
-    "@angular2-material/core": "^2.0.0-alpha.2",
-    "angular2": "2.0.0-beta.8",
-    "es6-promise": "^3.0.2",
-    "es6-shim": "^0.33.3",
+    "angular2": "2.0.0-beta.15",
+    "systemjs": "^0.19.26",
+    "es6-promise": "^3.1.2",
+    "es6-shim": "^0.35.0",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
-    "systemjs": "0.19.22",
-    "zone.js": "0.5.15"
+    "zone.js": "^0.6.11",
+    "bootstrap": "^3.3.6"    
   },
   "devDependencies": {
     "concurrently": "^2.0.0",
-    "lite-server": "^2.1.0",
-    "typescript": "^1.7.5"
+    "lite-server": "^2.2.0",
+    "typescript": "^1.8.10",
+    "typings": "^0.7.12"
   }
 }
